tests/tools/net/netdiff/invalidated_neigh/diff_edg.tools
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on 2024-02-29 13:55:29.303379 by netdiff.py v1_19_0+1092-a49a04372af
<configuration>
    <source value="source.net.xml"/>
    <dest value="dest.net.xml"/>
    <outprefix value="diff"/>
    <copy value="location"/>
</configuration>
-->

<edges version="1.20" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/edgediff_file.xsd">
    <!-- Copied Elements -->
    <edge id="CN" numLanes="1">
        <lane index="0" >
            <neigh lane="NC_1" />
        </lane>
    </edge>
    <edge id="CS" >
        <lane index="1" >
            <neigh lane="" />
        </lane>
    </edge>
    <edge id="CW" >
        <lane index="1" >
            <neigh lane="" />
        </lane>
    </edge>
    <edge id="NC" >
        <lane index="1" >
            <neigh lane="CN_0" />
        </lane>
    </edge>
    <edge id="WC" to="gneJ0">
        <lane index="1" >
            <neigh lane="" />
        </lane>
    </edge>
    <!-- Deleted Elements -->
    <delete id="CE"/>
    <delete id="EC"/>
    <delete id="SC"/>
    <!-- Created Elements -->
    <edge id="WC.42" from="gneJ0" numLanes="2" priority="2" speed="13.89" to="C"/>
    <!-- Changed Elements -->
    <edge id="CN" numLanes="1">
        <lane index="0" >
            <neigh lane="NC_1" />
        </lane>
    </edge>
    <edge id="CS" >
        <lane index="1" >
            <neigh lane="" />
        </lane>
    </edge>
    <edge id="CW" >
        <lane index="1" >
            <neigh lane="" />
        </lane>
    </edge>
    <edge id="NC" >
        <lane index="1" >
            <neigh lane="CN_0" />
        </lane>
    </edge>
    <edge id="WC" to="gneJ0">
        <lane index="1" >
            <neigh lane="" />
        </lane>
    </edge>
</edges>
